<?xml version="1.0" encoding="utf-8"?>
<!--This is for future, when the add exercise fragment should be replaced by a modal-->
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal">
<!--    android:stretchColumns="0,1">-->
<!--    <TableRow>-->
        <EditText
            android:id="@+id/input_exercise_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textAutoComplete"
            android:hint="@string/hint_exercise_name"
            android:text="a"/>
<!--    </TableRow>-->

<!--    <TableRow>-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/input_exercise_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/hint_exercise_weight"
                android:text="3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_exercise_weight_kg" />
        </LinearLayout>

<!--    </TableRow>-->

<!--    <TableRow>-->
        <EditText
            android:id="@+id/input_exercise_reps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/hint_exercise_reps"
            android:text="2"/>
<!--    </TableRow>-->


</LinearLayout>
</layout>