<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/design_default_color_primary"
        android:layout_margin="5dp"
        app:cardElevation="@dimen/cardview_default_elevation">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1,2">
            <TableRow
                android:layout_marginTop="2dp">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exercise_name"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/cardview_light_background"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exercise_weight"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/cardview_light_background"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exercise_reps"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/cardview_light_background"/>
            </TableRow>
            <TableRow
                android:layout_marginBottom="2dp">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/exercise_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_text"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/cardview_light_background"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/exercise_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_number"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/cardview_light_background"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/exercise_reps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_number"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/cardview_light_background"/>
            </TableRow>
        </TableLayout>
    </com.google.android.material.card.MaterialCardView>

</layout>